modules/grammars/tool/src/test/resources/cocos/valid/RootName.td
package valid;

tool RootName {
    attribute path = "some/awesome/path";
}
