modules/grammars/tool/src/test/resources/cocos/invalid/AttributeType.td
package invalid;

tool AttributeType {
    attribute path = true;
}
